# openfang

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev-runner  MIGRATION.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  flake.nix  openapi.json  openfang.toml.example  test_vertex_e2e.py
.github/workflows/: ci.yml  release.yml
crates/openfang-api/: Cargo.toml
crates/openfang-api/src/: channel_bridge.rs  files_browser.rs  lib.rs  middleware.rs  openai_compat.rs  openapi.rs  routes.rs  server.rs  session_auth.rs  types.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html  index_head.html
crates/openfang-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs  skill_config_api_test.rs
crates/openfang-channels/src/: bridge.rs  discord.rs  feishu.rs  irc.rs  router.rs  slack.rs  telegram.rs
crates/openfang-cli/src/: main.rs
crates/openfang-desktop/: tauri.conf.json
crates/openfang-evolve/: Cargo.toml
crates/openfang-evolve/src/: analyzer.rs  batch_apply.rs  confirm.rs  correction.rs  dedup.rs  evolver.rs  lib.rs  patch.rs  prompt.rs  quality.rs  store.rs  triggers.rs  types.rs
crates/openfang-evolve/tests/: analyze_e2e.rs  evolver_e2e.rs
crates/openfang-hands/: Cargo.toml
crates/openfang-hands/src/: bundled.rs  lib.rs  registry.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  (+10 more)
crates/openfang-memory/: Cargo.toml
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: a2a.rs  agent_loop.rs  cgroup_sandbox.rs  compactor.rs  context_analysis.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  host_functions.rs  kernel_handle.rs  lib.rs  llm_driver.rs  loop_guard.rs  mcp.rs  mcp_server.rs  media_understanding.rs  microcompact.rs  model_catalog.rs  ner_engine.rs  prompt_builder.rs  provider_health.rs  python_runtime.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_policy.rs  tool_runner.rs  tool_search.rs  web_fetch.rs  workspace_sandbox.rs
crates/openfang-runtime/src/drivers/: anthropic.rs  bedrock.rs  claude_code.rs  gemini.rs  mod.rs  openai.rs  qwen_code.rs
crates/openfang-types/: Cargo.toml
deploy/: openfang.service  openfang.slice
docs/: channel-adapters.md  configuration.md  getting-started.md  launch-roadmap.md  providers.md  troubleshooting.md
scripts/: install.sh
sdk/javascript/: index.js
tests/integration/: Dockerfile  Dockerfile.daemon  conftest.py  test_live.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+88 files in other folders)
