[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Build automation for the OpenFang workspace"

[dependencies]
openfang-api = { path = "../crates/openfang-api" }
clap = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
