[package]
name = "openfang-evolve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution analysis and skill evolution engine for OpenFang"

[dependencies]
openfang-types = { path = "../openfang-types" }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
strsim = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
